# Barfas_Projects

./: README.md
Hasandan_Gelenler/: ESP32_BLE_Wifi_V201.rar
Hasandan_Gelenler/ESP32_BLE_Wifi_V115/ESP32_BLE_Wifi_V115/: ESP32_BLE_Wifi_V115.ino
Hasandan_Gelenler/ESP32_BLE_Wifi_V201/ESP32_BLE_Wifi_V201/: ESP32_BLE_Wifi_V201.ino
Softwares/OE0113-WiFi_QR_Mifare_Reader/OE0113-WiFi_QR_Mifare_Reader/: OE0113-WiFi_QR_Mifare_Reader.kicad_dru  OE0113-WiFi_QR_Mifare_Reader.kicad_pcb  OE0113-WiFi_QR_Mifare_Reader.kicad_prl  fp-info-cache
Softwares/Smart_Lock_TFC/MDK-ARM/: Smart_Lock.uvguix.Seyithan
myDocuments/: Wall_Type_Lock_WorkingPrinciple.txt  Wall_Type_Lock_WorkingPrinciple_Lite.txt
myHardwares/Smart_Lock_TFC_Hardware/: Smart_Lock_V1.00.brd  Smart_Lock_V1.00.sch
myHardwares/Smart_Lock_TFC_Hardware/Main PCB/: eagle.epf
myPlans/: 1_Burak_YALIM_OCAK_2026.xlsx  2_Burak_YALIM_SUBAT_2026.xlsx  3_Burak_YALIM_MART_2026.xlsx  4_Burak_YALIM_NISAN_2026.xlsx
myProjects/1_Access_Control_Terminal/: C4_Model_Viewer.html
myProjects/1_Access_Control_Terminal/ACCESS_Control/: .pio2.rar  CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults
myProjects/1_Access_Control_Terminal/ACCESS_Control/src/: CMakeLists.txt  app_main.c  state_machine.c  state_machine.h
myProjects/1_Access_Control_Terminal/Docs/: 1.Protocol_Onloi_Access_Control_CARD.xlsx  3.Protocol_Onloi_Access_Control_Mobile_App.xlsx  (+12 more)
mySoftware/1.Example-Project/: CMakeLists.txt  platformio.ini
mySoftware/2.Access_Terminal_C4/: CMakeLists.txt
mySoftware/Smart_Lock_TFC/: .mxproject  smart_lock.ioc
(+462 files in other folders)
